Implement Withdraw handler
